# tezedge-bootstrap-poc

./: Cargo.toml
src/: bootstrap_state.rs  decipher_state.rs  error.rs  handshake_state.rs  lib.rs  read_message_state.rs  socket.rs  socket_state.rs  trusted_connection.rs
src/bootstrap/: blockchain.rs  genesis.rs  message.rs  mod.rs  state.rs  sync_block_headers.rs
