[package]
name = "tezedge-bootstrap-poc"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.3", features = ["rt-multi-thread", "io-util", "sync", "net", "io-std", "macros", "stream", "signal"] }
failure = { version = "0.1", features = ["derive"] }
slog = "2.5"
slog-async = "2.5"
slog-term = "2.6"
either = "1.6"

tezos_encoding = { tag = "v0.5.0", git = "https://github.com/simplestaking/tezedge" }
tezos_messages = { tag = "v0.5.0", git = "https://github.com/simplestaking/tezedge" }
tezos-conversation = { branch = "develop", git = "https://github.com/simplestaking/tezos-dissector" }
crypto = { tag = "v0.5.0", git = "https://github.com/simplestaking/tezedge" }
